@@ -31,8 +31,8 @@ static struct core_dispLayout spinb_dispDMD[] = {
 / Bushido (1993) - ( Last game by Inder - before becomming Spinball - but same hardware)
 /-------------------------------------------------------------------*/
 INITGAME(bushido, spinb_dispDMD, FLIP_SWNO(0,0), 3, SNDBRD_SPINB, SPINB_DSP1, SPINB_GS1(0x11,0x0C,0,FALSE), 175)
-SPINB_ROMSTART(bushido,	"0-z80.bin", CRC(3ea1eb1d) SHA1(cceb6c68e481f36a5646ff4f38d3dfc4275b0c79),
-						"1-z80.old", CRC(648da72b) SHA1(1005a13b4746e302d979c8b1da300e943cdcab3d))
+SPINB_ROMSTART(bushido,	"0-z80.bin",    CRC(3ea1eb1d) SHA1(cceb6c68e481f36a5646ff4f38d3dfc4275b0c79),
+						"1-z80.old",    CRC(648da72b) SHA1(1005a13b4746e302d979c8b1da300e943cdcab3d))   // more code in it than alternate set A and B
 SPINB_DMDROM1(			"g-disply.bin", CRC(9a1df82f) SHA1(4ad6a12ae36ec898b8ac5243da6dec3abcd9dc33))
 SPINB_SNDROM22(			"a-sonido.bin", CRC(cf7d5399) SHA1(c79145826cfa6be2487e3add477d9b452c553762),
 						"b-sonido.bin", CRC(cb4fc885) SHA1(569f389fa8f91f886b58f44f701d2752ef01f3fa),	//Sound Effects 1
@@ -43,8 +43,8 @@ SPINB_SNDROM22(			"a-sonido.bin", CRC(cf7d5399) SHA1(c79145826cfa6be2487e3add477
 SPINB_ROMEND
 CORE_GAMEDEFNV(bushido,"Bushido",1993,"Inder/Spinball (Spain)",mSPINBS,0)
 
-SPINB_ROMSTART(bushidoa,"0-cpu.bin", CRC(7f7e6642) SHA1(6872397eed7525f384b79cdea13531d273d8cf14),
-						"1-cpu.bin", CRC(a538d37f) SHA1(d2878ad0d31b4221b823812485c7faaf666ce185))
+SPINB_ROMSTART(bushidoa,"0-cpu.bin",    CRC(7f7e6642) SHA1(6872397eed7525f384b79cdea13531d273d8cf14),
+						"1-cpu.bin",    CRC(a538d37f) SHA1(d2878ad0d31b4221b823812485c7faaf666ce185))
 SPINB_DMDROM1(			"g-disply.bin", CRC(9a1df82f) SHA1(4ad6a12ae36ec898b8ac5243da6dec3abcd9dc33))
 SPINB_SNDROM22(			"a-sonido.bin", CRC(cf7d5399) SHA1(c79145826cfa6be2487e3add477d9b452c553762),
 						"b-sonido.bin", CRC(cb4fc885) SHA1(569f389fa8f91f886b58f44f701d2752ef01f3fa),	//Sound Effects 1
@@ -55,7 +55,21 @@ SPINB_SNDROM22(			"a-sonido.bin", CRC(cf7d5399) SHA1(c79145826cfa6be2487e3add477
 SPINB_ROMEND
 #define init_bushidoa init_bushido
 #define input_ports_bushidoa input_ports_bushido
-CORE_CLONEDEFNV(bushidoa,bushido,"Bushido (alternate set)",1993,"Inder/Spinball (Spain)",mSPINBS,0)
+CORE_CLONEDEFNV(bushidoa,bushido,"Bushido (alternate set A)",1993,"Inder/Spinball (Spain)",mSPINBS,0)
+
+SPINB_ROMSTART(bushidob,"inder_sa_m-17_pb-in_a-1954-93_b4_cpu rom_0_06-a.bin", CRC(7c8561f7) SHA1(d81338160f6eb8898a7b779f57e327d2db3f7dab),
+						"inder_sa_m-17_pb-in_a-1954-93_b4_cpu rom_1_06-a.bin", CRC(4a41865c) SHA1(f597d5dd42b804ab637408b90d05bdb234559a48)) // more code in it than alternate set A
+SPINB_DMDROM1(			"g-disply.bin", CRC(9a1df82f) SHA1(4ad6a12ae36ec898b8ac5243da6dec3abcd9dc33))
+SPINB_SNDROM22(			"a-sonido.bin", CRC(cf7d5399) SHA1(c79145826cfa6be2487e3add477d9b452c553762),
+						"b-sonido.bin", CRC(cb4fc885) SHA1(569f389fa8f91f886b58f44f701d2752ef01f3fa),	//Sound Effects 1
+						"c-sonido.bin", CRC(35a43dd8) SHA1(f2b1994f67f749c65a88c95d970b655990d85b96),	//Sound Effects 2
+						"d-musica.bin", CRC(2cb9697c) SHA1(d5c66d616ccd5e299832704e494743429dafd569),
+						"e-musica.bin", CRC(1414b921) SHA1(5df9e538ee109df28953ec8f162c60cb8c6e4d96),	//Music 1
+						"f-musica.bin", CRC(80f3a6df) SHA1(e09ad4660e511779c6e55559fa0c2c0b0c6600c8))	//Music 2
+SPINB_ROMEND
+#define init_bushidob init_bushido
+#define input_ports_bushidob input_ports_bushido
+CORE_CLONEDEFNV(bushidob,bushido,"Bushido (alternate set B)",1993,"Inder/Spinball (Spain)",mSPINBS,0)
 
 /*-------------------------------------------------------------------
 / Mach 2 (1995) // or Mach 2.0 Two ?
