@@ -35,6 +35,7 @@ Tales of the Arabian Nights 0.4 Prototype (see above)
 Clones:
 A.G. Soccer-Ball & Football R18u with 2.5L Sound (only the latter is new, 2.4 revision, inside the ROM it says 2.5L though)
 Bad Cats LG-4
+Bushido (alternate set B)
 Cheech & Chong: Road-Trip'pin (Harley-Davidson unofficial MOD)
 Flintstones, The LA-5
 Lucky Draw (alternate version - only difference is the #3 ROM)
